--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Permissions-Policy" content="ambient-light-sensor=(), accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()" />
     
     <!-- SEO Meta Tags -->
     <title>PM Surya Ghar Muft Bijli Yojana Recruitment 2025 – Government Project Jobs</title>
