Fixed MIME type error by removing base path

--- a/public/404.html
+++ b/public/404.html
@@ -5,17 +5,12 @@
     <title>Redirecting...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript">
-      // GitHub Pages 404 redirect to enable client-side routing
-      var pathSegmentsToKeep = 1; // Keep '/onspace-9b5ae1-14219' base path
-      
+      // Redirect to root with hash-based routing
       var l = window.location;
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        '/onspace-9b5ae1-14219/?p=' + encodeURIComponent(
-          l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/')
-        ) + (l.search ? '&q=' + l.search.slice(1) : '') +
-        (l.hash ? '#' + l.hash.slice(1) : '')
-      );
+      var path = l.pathname + l.search;
+      if (path !== '/') {
+        l.replace(l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') + '/#' + path);
+      }
     </script>
   </head>
   <body>
